--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "untitled",
+  "name": "bm_next2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
+    "@sanity/client": "^6.14.3",
+    "@sanity/image-url": "^1.0.2",
+    "framer-motion": "^11.0.6",
+    "next": "14.1.0",
+    "rc-slider": "^10.5.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-fast-marquee": "^1.6.4",
+    "react-player": "^2.15.1",
+    "sass": "^1.71.1",
+    "usehooks-ts": "^2.15.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
